<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DetailActivity" >
    
    <ImageView
        android:id="@+id/detailIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imgCondo"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:src="@drawable/condo" />

    <TextView
        android:id="@+id/descDetailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/detailIv"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/detailIv"
        android:layout_marginLeft="19dp"
        android:layout_toRightOf="@+id/detailIv"
        android:text="@string/txtDesc"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/addressDetailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/detailIv"
        android:layout_below="@+id/textView1"
        android:text="@string/txtView" />

    <TextView
        android:id="@+id/roomDetailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/detailIv"
        android:layout_marginTop="16dp"
        android:text="@string/txtRoom" />

    <TextView
        android:id="@+id/priceDetailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/roomDetailTv"
        android:layout_alignBottom="@+id/roomDetailTv"
        android:layout_alignLeft="@+id/descDetailTv"
        android:text="@string/txtPrice" />

    <TextView
        android:id="@+id/nameDetailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addressDetailTv"
        android:layout_below="@+id/textView2"
        android:text="@string/txtView" />

    <TextView
        android:id="@+id/areaDetailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/priceDetailTv"
        android:layout_alignBottom="@+id/priceDetailTv"
        android:layout_alignRight="@+id/descDetailTv"
        android:layout_marginRight="29dp"
        android:text="@string/txtArea" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nameDetailTv"
        android:layout_below="@+id/nameDetailTv"
        android:layout_marginTop="19dp"
        android:text="@string/txtOwnerPhone" />

    <TextView
        android:id="@+id/phoneDetailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:text="@string/txtView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phoneDetailTv"
        android:layout_below="@+id/phoneDetailTv"
        android:layout_marginTop="18dp"
        android:text="@string/txtOwnerEmail" />

    <TextView
        android:id="@+id/emailDetailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:text="@string/txtView" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addressDetailTv"
        android:layout_below="@+id/roomDetailTv"
        android:layout_marginTop="29dp"
        android:text="@string/txtAddress" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nameDetailTv"
        android:layout_centerVertical="true"
        android:text="@string/txtOwnerName" />

    <ImageView
        android:id="@+id/shareImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailDetailTv"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imgShareMSG"
        android:maxHeight="60dp"
        android:maxWidth="60dp"
        android:onClick="shareByEmail"
        android:src="@drawable/sharing" />

    <ImageView
        android:id="@+id/gmImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignLeft="@+id/areaDetailTv"
        android:layout_alignRight="@+id/descDetailTv"
        android:layout_alignTop="@+id/textView1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imgGM"
        android:maxHeight="40dp"
        android:maxWidth="40dp"
        android:onClick="openGoogleMap"
        android:src="@drawable/gmap" />

    <ImageView
        android:id="@+id/phoneImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/phoneDetailTv"
        android:layout_alignLeft="@+id/gmImageView"
        android:layout_alignRight="@+id/descDetailTv"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imgCall"
        android:maxHeight="40dp"
        android:maxWidth="40dp"
        android:onClick="dialOwner"
        android:src="@drawable/telephone" />

    <ImageView
        android:id="@+id/emailImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/emailDetailTv"
        android:layout_alignLeft="@+id/phoneImageView"
        android:layout_alignRight="@+id/phoneImageView"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imgEmail"
        android:maxHeight="40dp"
        android:maxWidth="40dp"
        android:onClick="emailOwner"
        android:src="@drawable/email" />

</RelativeLayout>
